--- a/index.htm
+++ b/index.htm
@@ -43,6 +43,9 @@ Eastern District of Michigan.
 The analysis of the seized data and the international investigations regarding the operators and users of
 the network will be continued.
 </p>
+ <p class="lead col-10 mx-auto">
+Btw. Only a joke
+</p>
 <img alt="Safe Inet" src="img/Logo.jpg" width="300" height="300" class="img-fluid my-3">
 </div>
 <footer class="container mt-4 border-top">
